openshift/db-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert -f docker-compose.yml
      --provider=openshift
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    io.kompose.service: db
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: javatest
        - name: MYSQL_PASSWORD
          value: mysenha
        - name: MYSQL_ROOT_PASSWORD
          value: mysenha
        - name: MYSQL_USER
          value: root
        image: ' '
        name: mysql
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: my-db
      restartPolicy: Always
      volumes:
      - name: my-db
        persistentVolumeClaim:
          claimName: my-db
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - mysql
      from:
        kind: ImageStreamTag
        name: db:5.7
    type: ImageChange
status: {}
