openshift/mysql_d.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: y-java-tomcat-mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: MySenha@@1
        name: mysql
        image: image-registry.openshift-image-registry.svc:5000/openshift/mysql:latest
        ports:
          - containerPort: 3306
