openshift/mysql_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-cargadb-pod
spec:
  containers:
    - name: mysql
      image: image-registry.openshift-image-registry.svc:5000/openshift/mysql:latest
      ports:
        - containerPort: 3306
      command: [ "/bin/bash", "-c", "sleep 10;" ]
      command: [ "/bin/bash", "-c", "mysql -u root --password=MySenha@@1 -h mysql javatest < wget $(ARQUIVO);" ]
      command: [ "/bin/bash", "-c", "exit 0;" ]
  restartPolicy: Never
