openshift/web-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: /snap/kompose/1/./kompose-linux-amd64 convert -f docker-compose.yml
      --provider=openshift
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    io.kompose.service: web
  strategy:
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - env:
        - name: DATABASE__CLIENT
          value: db
        - name: DATABASE__CONNECTION__DATABASE
          value: javatest
        - name: DATABASE__CONNECTION__HOST
          value: db
        - name: DATABASE__CONNECTION__PASSWORD
          value: mysenha
        - name: DATABASE__CONNECTION__USER
          value: root
        image: ' '
        name: web
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps/dbtest
          name: web-claim0
      restartPolicy: Always
      volumes:
      - name: web-claim0
        persistentVolumeClaim:
          claimName: web-claim0
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - web
      from:
        kind: ImageStreamTag
        name: web:latest
    type: ImageChange
status: {}
