openshift/mysql_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-java-tomcat-mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
