openshift/app_route_httpd.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: docker-sample-java-mysql-tomcat
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: docker-sample-java-mysql-tomcat
